--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     transition: background 0.3s, color 0.3s;
-    background-color: #000; /* Black background */
+    background-color: #080005; /* Black background */
     color: #4CAF50; /* Green text */
 }
 
@@ -31,7 +31,7 @@ header {
 .logo a {
     font-size: 1.5em;
     font-weight: bold;
-    color: #4CAF50; /* Green text */
+    color: #0f0; /* Green text */
 }
 
 nav ul {
@@ -46,13 +46,14 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #4CAF50; /* Green text */
-    font-size: 1em;
+    font-weight: bold;
+    color: rgba(0, 255, 0, 0.932); /* Green text */
+    font-size: 1.2em;
     transition: color 0.3s;
 }
 
 nav ul li a:hover {
-    color: #ffd700; /* Yellow on hover */
+    color: rgb(40, 214, 40); /* Yellow on hover */
 }
 
 /* Mobile Navigation Icon */
@@ -97,7 +98,7 @@ section {
 .section-content h2 {
     font-size: 2em;
     margin-bottom: 1em;
-    color: #4CAF50; /* Green text */
+    color: #0f0; /* Green text */
 }
 
 .section-content p {
@@ -114,6 +115,529 @@ section {
     font-size: 1.1em;
     margin-bottom: 0.5em;
 }
+
+/* About Section */
+.about-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-left,
+.about-right {
+    flex: 1;
+    padding: 1em;
+}
+
+.about-left {
+    text-align: left;
+}
+
+.about-right {
+    text-align: right;
+}
+
+.about-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 150px;
+}
+
+/* Education Section */
+#education {
+    padding: 4em 2em;
+    /* Match the global background */
+    color: #4CAF50; /* Match the global text color */
+}
+
+#education .section-content {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+#education h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+    color: #0f0; /* Green text */
+}
+
+.education-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2em;
+}
+
+.education-column {
+    flex: 1;
+    min-width: 300px; /* Adjust based on the desired minimum width */
+}
+
+.education-row {
+    border: 1px solid #0f0; /* Green border */
+    padding: 1em;
+    margin-bottom: 2em;
+    border-radius: 5px;
+    text-align: left;
+}
+
+.education-row h3 {
+    margin-top: 0;
+    color: #0f0; /* Green text */
+}
+
+.education-row p {
+    margin-bottom: 0;
+    font-size: 1.1em;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .education-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .education-column {
+        min-width: 100%;
+    }
+}
+
+/* Skills Section */
+#skills {
+    padding: 4em 2em;
+    /* Match the global background */
+    color: #4CAF50; /* Match the global text color */
+}
+
+#skills .section-content {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+#skills h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+    color: #0f0; /* Green text */
+}
+
+.skills-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.skill-item {
+    width: 120px; /* Adjust width of each skill item */
+    margin: 1em;
+    animation: moveRightToLeft 5s linear infinite; /* Adjust animation duration and timing function */
+}
+
+.skill-item img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Animation keyframes */
+@keyframes moveRightToLeft {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .skill-item {
+        width: 100px; /* Adjust for smaller screens */
+    }
+}
+
+
+
+/* Experience Section */
+#experience {
+    padding: 4em 2em;
+    /* Match the global background */
+    color: #4CAF50; /* Match the global text color */
+}
+
+#experience .section-content {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+#experience h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+    color: #0f0; /* Green text */
+}
+
+.experience-columns {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.experience-left,
+.experience-right {
+    flex-basis: calc(50% - 2em); /* Adjust column width */
+    padding: 1em;
+    text-align: left;
+}
+
+.experience-item {
+    margin-bottom: 2em;
+    border: 2px solid #4CAF50; /* Green border */
+    padding: 1em;
+    border-radius: 5px;
+}
+
+.experience-item h3 {
+    margin-bottom: 0.5em;
+    color: #0f0; /* Green text */
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .experience-left,
+    .experience-right {
+        flex-basis: 100%; /* Full width on smaller screens */
+    }
+}
+
+
+
+/* Projects Section */
+#projects {
+    padding: 4em 2em;
+    /* Match the global background */
+    color: #4CAF50; /* Match the global text color */
+}
+
+#projects .section-content {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+#projects h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+    color: #0f0; /* Green text */
+}
+
+.projects-grid {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.column {
+    flex-basis: calc(50% - 2em); /* Adjust column width */
+}
+
+.project-item {
+    margin-bottom: 2em;
+    padding: 1em;
+    border-radius: 10px; /* Rounded corners */
+    border: 2px solid #4CAF50; /* Green border */
+}
+
+.project-item h3 {
+    margin-bottom: 0.5em;
+    color: #0f0; /* Green text */
+}
+
+.project-item p {
+    font-size: 1em;
+    line-height: 1.6;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .column {
+        flex-basis: 100%; /* Full width on smaller screens */
+    }
+}
+
+/* Contact Section */
+.contact-section {
+    padding: 4em 2em;
+    background-color: #080005; /* Dark background */
+    color: #4CAF50; /* Green text */
+    text-align: center; /* Center align the content */
+}
+
+.contact-section .section-content {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+.contact-top {
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+.contact-columns {
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.contact-left,
+.contact-right {
+    flex-basis: calc(50% - 1em); /* Adjust the width as needed */
+    padding: 2em;
+    border-radius: 10px; /* Rounded corners */
+    border: 2px solid #4CAF50; /* Green border */
+}
+
+.contact-right {
+    margin: auto;
+    padding: 2em; /* Increase padding for more space */
+    background-color: #111; /* Dark background */
+    margin-left: 1em; /* Adjust margin for spacing */
+}
+
+.contact-right h2 {
+    color: #0f0; /* Green text */
+    margin-bottom: 1em;
+}
+
+.contact-info {
+    list-style-type: none;
+    padding: 0;
+}
+
+
+.contact-info li {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    color: #0f0; /* Green text color */
+}
+
+.contact-info li img {
+    margin-right: 10px; /* Adjust spacing between icon and text */
+    width: 20px; /* Adjust icon size as needed */
+    height: 20px;
+}
+
+.contact-info li span {
+    display: inline-block;
+    width: 30px; /* Adjust width of icon container */
+    text-align: center;
+}
+
+
+.intro-label {
+    text-align: left;
+    color: #0f0; /* Green text */
+    font-size: 1em;
+}
+
+.social-links {
+    margin-top: 2em;
+}
+
+.social-links h3 {
+    color: #0f0; /* Green text */
+    font-size: 1.2em;
+    margin-bottom: 1em;
+}
+
+.social-links ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center; /* Center align social links */
+}
+
+.social-links ul li {
+    margin-right: 1em;
+}
+
+.social-links ul li:last-child {
+    margin-right: 0;
+}
+
+.social-links ul li a {
+    display: block;
+    width: 30px;
+    height: 30px;
+}
+
+.social-links ul li a img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease-in-out;
+}
+
+.social-links ul li a:hover img {
+    transform: scale(1.2);
+}
+
+/* Form styles (adapted from previous styles) */
+.rounded-form {
+    margin-top: 2em;
+    margin: auto;
+}
+
+.rounded-form h2 {
+    margin-bottom: 1em;
+    color: #0f0; /* Green text */
+}
+
+.rounded-form .form-group {
+    margin-bottom: 15px;
+}
+
+.rounded-form .form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #0f0; /* Green text */
+}
+
+.rounded-form .form-group input,
+.rounded-form .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+    background-color: #333; /* Dark input background */
+    color: #fff; /* White text */
+}
+
+.rounded-form .form-group textarea {
+    height: 150px;
+}
+
+.rounded-form button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.rounded-form button:hover {
+    background-color: #0f0;
+}
+
+#form-message {
+    text-align: left;
+    margin-top: 10px;
+    color: #0f0; /* Green text */
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .contact-columns {
+        flex-direction: column;
+    }
+
+    .contact-left,
+    .contact-right {
+        flex-basis: 100%;
+        margin-bottom: 2em;
+    }
+
+    .social-links ul {
+        justify-content: center; /* Center align social links in mobile view */
+    }
+}
+
+
+
+/* Footer */
+footer {
+    padding: 2em 0;
+    background-color: #555; /* Dark background */
+    color: #0f0; /* Green text */
+    text-align: center; /* Center align the content */
+}
+
+footer .section-content {
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    font-size: 1em; /* Increase font size for better readability */
+}
+
+
+/* Custom Switch Button */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #4CAF50;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+/* Dark Theme */
+body.dark-theme {
+    background-color: #080005;
+    color: #ffffff;
+}
+
+body.light-theme {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+
 
 /* Typewriter effect */
 .typewriter {
@@ -155,13 +679,6 @@ section {
     background-color: #555;
 }
 
-/* Footer */
-footer {
-    background-color: #222;
-    color: #fff;
-    padding: 2em 0;
-    text-align: center;
-}
 
 /* Social links */
 .social-links {
@@ -211,7 +728,7 @@ footer {
 }
 
 #themeToggle:hover {
-    color: #ffd700;
+    color: #0f0;
 }
 
 /* Responsive Design */
@@ -267,109 +784,8 @@ footer {
         width: 25px; /* Adjust icon size for smaller screens */
         height: 25px;
     }
+
+
+
 }
 
-/* Additional styles for the contact form */
-.contact-form {
-    max-width: 600px; /* Adjust for larger screens if needed */
-    margin: 50px auto;
-    padding: 30px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #111; /* Dark background */
-}
-
-.contact-form h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #4CAF50; /* Green text */
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #4CAF50; /* Green text */
-}
-
-.form-group input,
-.form-group textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-    background-color: #333; /* Dark input background */
-    color: #fff; /* White text */
-}
-
-.form-group textarea {
-    height: 150px;
-}
-
-.contact-form button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.contact-form button:hover {
-    background-color: #3e8e41;
-}
-
-#form-message {
-    text-align: center;
-    margin-top: 10px;
-    color: #4CAF50; /* Green text */
-}
-
-/* Media Queries for Responsive Design */
-
-@media only screen and (max-width: 768px) {
-    .contact-form {
-        padding: 20px;
-    }
-
-    .form-group {
-        margin-bottom: 10px;
-    }
-
-    .form-group label {
-        font-size: 0.8em;
-    }
-
-    .form-group input,
-    .form-group textarea {
-        font-size: 0.9em;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    .contact-form {
-        max-width: 100%;
-    }
-
-    .form-group {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .form-group label {
-        margin-bottom: 5px;
-        width: 100%;
-    }
-
-    .form-group input,
-    .form-group textarea {
-        width: 100%;
-    }
-}
